syntax = "proto3";

package user;

option go_package = "./protogen";

import "google/protobuf/timestamp.proto";

service UserService {
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
	rpc GetUser(GetUserRequest) returns (GetUserResponse);
	rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
	rpc UpdateUserPassword(UpdateUserPasswordRequest) returns (UpdateUserPasswordResponse);
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
	rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
	rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
}

message User {
	string id = 1;
	string email = 2;
	google.protobuf.Timestamp created_at = 3;
	google.protobuf.Timestamp updated_at = 4;
}

message CreateUserRequest {
	string email = 1;
	string password = 2;
	string confirmation = 3;
	bool checkbox = 4;
}

message CreateUserResponse {
	User user = 1;
}

message GetUserRequest {
	string id = 1;
}

message GetUserResponse {
	User user = 1;
}

message UpdateUserRequest {
	string id = 1;
	string email = 2;
}

message UpdateUserResponse {
	User user = 1;
}

message UpdateUserPasswordRequest {
	string id = 1;
	string password = 2;
	string confirmation = 3;
}

message UpdateUserPasswordResponse {
	bool success = 1;
}

message DeleteUserRequest {
	string id = 1;
}

message DeleteUserResponse {
	bool success = 1;
}

message ListUsersRequest {
}

message ListUsersResponse {
	repeated User users = 1;
}

message AuthenticateUserRequest {
	string email = 1;
	string password = 2;
}

message AuthenticateUserResponse {
	User user = 2;
}
